# code-style-demo

./: .flake8  .pre-commit-config.yaml  README.md  demo.py  makefile  pyproject.toml
